--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Calculator</h1>
-    <form action="index.html" method="POST">
+    <form action="/" method="post">
       <input type="text" name="num1" placeholder="first number" />
       <input type="text" name="num2" placeholder="second number" />
       <button type="submit" name="submit">submit</button>
